# craftinterpreter

./: ._.gitignore  .clang-format  .gitignore  CMakeLists.txt  SETUP.md  build_mac.sh  build_ubuntu.sh
.github/workflows/: ci.yml
csrc/: ._interpreter.cpp  ._loxfunction.cpp  environment.cpp  expr.cpp  expr_test_main.cpp  interpreter.cpp  loc.cpp  lox.cpp  loxfunction.cpp  scanner.cpp  token.cpp  token.sublime-workspace
csrc/include/: ._interpreter.h  ._loxfunction.h  ._loxvalue.h  ._parser.h  ._stmt.h  FunctionTypeEnum.h  environment.h  expr.h  interpreter.h  lox.h  loxfunction.h  loxvalue.h  parser.h  pch.h  resolver.h  runtimeerror.h  scanner.h  stmt.h  token.h  tokentype.h
csrc/include/helper/: guard.h  object.h
csrc/inlcude/: lox.h  scanner.h  token.h  tokentype.h
lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  InterpreterTest.java  Lox.java  LoxFunction.java  Parser.java  Resolver.java  Return.java  Scanner.java  Stmt.java
scripts/: install-hooks.sh  pre-commit
tests/: CLASSPATH_FIX.md  NUMBER_FORMAT.md  PIPE_INPUT_FIX.md  README.md  USAGE.md  ch10_functions.lox  ch7_arithmetic.lox  ch7_comparison.lox  ch7_equality.lox  ch7_numbers.lox  ch7_strings.lox  ch7_unary.lox  ch8_expr_stmt.lox  ch8_print.lox  ch8_undefined_var.lox  ch8_var.lox  debug_java.sh  debug_output.sh  diagnose.sh  file_input_test.sh  interpreter_test.cpp  java_output.txt  lox_integration_test.cpp  parser_test.cpp  quick_test.sh  run_tests.sh  scanner_test  scanner_test.cpp  simple_test.sh  test_arithmetic.lox  test_comparison.lox  test_grouping.lox  test_input.lox  test_java.sh  test_literals.lox  test_number_format.sh  test_numbers.lox  test_object.cpp  test_unary.lox  unit_tests.sh
tool/: GenerateAst.java
